--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "santhosh-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://santhoshdhandapani.github.io",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -22,7 +23,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "npm start",
-    "preview": "serve -s build"
+    "preview": "serve -s build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "motion": "^12.23.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
