refactor: 💡 added fav icon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Santhosh D",
+  "name": "Santhosh Dhandapani - Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
